--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/types": "^7.2.19",
+    "@next/env": "^15.0.2",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
